--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,36 @@
   "name": "openalarmsystemui",
   "version": "0.0.1",
   "description": "",
+  "author": "chocolateandmilkwin",
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Chocolateish/OpenAlarmSystem.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Chocolateish/OpenAlarmSystem/issues"
+  },
+  "homepage": "https://github.com/Chocolateish/OpenAlarmSystem#readme",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite -m pages",
+    "build": "tsc && vite build -m pages",
+    "serve": "vite preview --mode pages",
+    "dev:tests": "vite -m test",
+    "build:tests": "tsc && vite build -m tests",
+    "serve:tests": "vite preview --mode testServe",
+    "test": "npm run build:tests && start-server-and-test serve:tests http://localhost:999 'cypress run'",
+    "watch": "start-server-and-test dev:tests http://localhost:999 'cypress open --e2e --browser edge'"
   },
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "cypress": "^13.6.3",
+    "cypress-vite": "^1.5.0",
+    "sass": "^1.70.0",
+    "start-server-and-test": "^2.0.3",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12",
+    "vite-plugin-dts": "^3.7.1",
+    "vite-plugin-libcss": "^1.1.1"
+  }
 }
